bindings/ruby/lib/hydra/ffi.rb

################################################################################
#  THIS FILE IS 100% GENERATED BY ZPROJECT; DO NOT EDIT EXCEPT EXPERIMENTALLY  #
#  Please refer to the README for information about making permanent changes.  #
################################################################################

require 'ffi'

require_relative 'ffi/version'


module Hydra
  module FFI
    extend ::FFI::Library
    
    def self.available?
      @available
    end
    
    begin
      lib_name = 'libhydra'
      lib_paths = ['/usr/local/lib', '/opt/local/lib', '/usr/lib64']
        .map { |path| "#{path}/#{lib_name}.#{::FFI::Platform::LIBSUFFIX}" }
      ffi_lib lib_paths + [lib_name]
      @available = true
    rescue LoadError
      warn ""
      warn "WARNING: ::Hydra::FFI is not available without libhydra."
      warn ""
      @available = false
    end
    
    if available?
      opts = {
        blocking: true  # only necessary on MRI to deal with the GIL.
      }
      
      attach_function :hydra_new, [:string], :pointer, **opts
      attach_function :hydra_destroy, [:pointer], :void, **opts
      attach_function :hydra_set_nickname, [:pointer, :string], :void, **opts
      attach_function :hydra_nickname, [:pointer], :string, **opts
      attach_function :hydra_set_animate, [:pointer], :void, **opts
      attach_function :hydra_set_verbose, [:pointer], :void, **opts
      attach_function :hydra_set_local_ipc, [:pointer], :void, **opts
      attach_function :hydra_start, [:pointer], :int, **opts
      attach_function :hydra_fetch, [:pointer], :pointer, **opts
      attach_function :hydra_version, [:pointer, :pointer, :pointer], :void, **opts
      attach_function :hydra_test, [:bool], :void, **opts
      
      require_relative 'ffi/hydra'
    end
  end
end

################################################################################
#  THIS FILE IS 100% GENERATED BY ZPROJECT; DO NOT EDIT EXCEPT EXPERIMENTALLY  #
#  Please refer to the README for information about making permanent changes.  #
################################################################################
